# LedgerBull

./: .gitignore  .trivyignore  README.md  check-tools.sh
.github/workflows/: lint.yml  security-scan.yml
docs/adr/: ADR-001-tech-stack.md
frontend/: .env.example  package-lock.json
frontend/src/app/: layout.tsx
frontend/src/lib/: api.ts
infra/: docker-compose.yml
scripts/: verify-phase1.sh
services/api-gateway/: pom.xml
services/api-gateway/src/main/java/com/ledgerbull/apigateway/: ApiGatewayApplication.java
services/api-gateway/src/main/resources/: application.yml
services/api-gateway/src/test/java/com/ledgerbull/apigateway/: ApiGatewayApplicationTests.java
services/config-server/: pom.xml
services/config-server/src/main/java/com/ledgerbull/configserver/: ConfigServerApplication.java
services/config-server/src/test/java/com/ledgerbull/configserver/: ConfigServerApplicationTests.java
services/eureka-server/: pom.xml
services/eureka-server/src/main/java/com/ledgerbull/eurekaserver/: EurekaServerApplication.java
services/eureka-server/src/test/java/com/ledgerbull/eurekaserver/: EurekaServerApplicationTests.java
services/execution-service/: pom.xml
services/execution-service/src/main/java/com/ledgerbull/execution/: ExecutionServiceApplication.java
services/execution-service/src/main/java/com/ledgerbull/execution/client/: EngineFill.java  EngineSubmitResult.java  MatchingEngineClient.java
services/execution-service/src/main/java/com/ledgerbull/execution/config/: GrpcClientConfig.java  MatchingEngineProperties.java
services/execution-service/src/main/java/com/ledgerbull/execution/entity/: FillEntity.java  OrderEntity.java
services/execution-service/src/main/java/com/ledgerbull/execution/repository/: FillRepository.java  OrderRepository.java
services/execution-service/src/main/java/com/ledgerbull/execution/service/: ExecutionService.java  OrderMatchPersistenceService.java  OrderResponseMapper.java  OrderStateService.java  OrderStatusTransitions.java  OrderValidationService.java  PriceConverter.java
services/execution-service/src/main/java/com/ledgerbull/execution/web/: ExecutionController.java
services/execution-service/src/main/resources/: application.yml
services/execution-service/src/main/resources/db/migration/: V1__create_orders_table.sql  V2__create_fills_table.sql
services/execution-service/src/test/java/com/ledgerbull/execution/: EngineUnavailableIntegrationTest.java  ExecutionCancelQueryTest.java  ExecutionRoundTripIntegrationTest.java  ExecutionServiceApplicationTests.java  ExecutionServiceTestConfiguration.java  ExecutionValidationIntegrationTest.java  OrderStateServiceTest.java  OrderValidationServiceTest.java  PriceConverterTest.java
services/execution-service/src/test/resources/: application.yml
services/market-data-service/: .dockerignore  Dockerfile  pom.xml
services/market-data-service/src/main/java/com/ledgerbull/marketdata/: MarketDataServiceApplication.java
services/market-data-service/src/main/java/com/ledgerbull/marketdata/config/: MarketDataProperties.java
services/market-data-service/src/main/java/com/ledgerbull/marketdata/domain/: MarketTick.java  MarketTickId.java
services/market-data-service/src/main/java/com/ledgerbull/marketdata/ingest/: CoinbaseWebSocketClient.java  TickNormalizer.java
services/market-data-service/src/main/java/com/ledgerbull/marketdata/repository/: MarketTickRepository.java
services/market-data-service/src/main/java/com/ledgerbull/marketdata/service/: MarketTickService.java  TickBatchWriter.java
services/market-data-service/src/main/java/com/ledgerbull/marketdata/web/: MarketDataController.java
services/market-data-service/src/main/resources/: application.yml
services/market-data-service/src/main/resources/db/: schema.sql
services/market-data-service/src/test/java/com/ledgerbull/marketdata/: MarketDataServiceApplicationTests.java
services/matching-engine/: .gitignore  CMakeLists.txt  README.md
services/matching-engine/demo/: crash_recovery_demo.cpp  demo.cpp
services/matching-engine/include/ledgerbull/: event_log.hpp  fill.hpp  matching_engine.hpp  order.hpp  order_book.hpp
services/matching-engine/include/ledgerbull/grpc/: matching_engine_service.hpp
services/matching-engine/proto/: matching_engine.proto
services/matching-engine/scripts/: grpc_smoke_test.sh
services/matching-engine/src/: event_log.cpp  matching_engine.cpp  order_book.cpp
services/matching-engine/src/grpc/: matching_engine_service.cpp  server_main.cpp
services/matching-engine/tests/: test_event_log.cpp  test_framework.hpp  test_matching.cpp  test_order_book.cpp
services/position-service/: pom.xml
services/position-service/src/main/java/com/ledgerbull/position/: PositionServiceApplication.java
services/position-service/src/main/java/com/ledgerbull/position/client/: ExecutionClient.java  ExecutionFillsFetchResult.java  MarketPriceClient.java
services/position-service/src/main/java/com/ledgerbull/position/config/: ExecutionProperties.java  RestClientConfig.java
services/position-service/src/main/java/com/ledgerbull/position/entity/: LotEntity.java  PositionEntity.java  ProcessedFillEntity.java
services/position-service/src/main/resources/: application.yml
services/position-service/src/main/resources/db/migration/: V1__create_positions_table.sql  V2__create_lots_table.sql  V3__create_processed_fills_table.sql  V4__add_taker_side_to_processed_fills.sql  V5__add_fill_created_at_to_processed_fills.sql
services/position-service/src/test/java/com/ledgerbull/position/: PositionServiceApplicationTests.java  PositionServiceTestConfiguration.java
services/position-service/src/test/resources/: application.yml
(+40 files in other folders)
